--- a/style.css
+++ b/style.css
@@ -33,6 +33,52 @@ body{
     color: black;
     padding: 20px;
 }
+.popup{
+   width: 14rem;
+   height: 12rem;
+   background-color: white;
+   top: 10%;
+   right: 3%;
+   position: absolute;
+   z-index: 1;
+   border-radius: 10px;
+   box-shadow: 2px 2px 4px 4px rgb(207, 202, 202);
+   overflow: hidden;
+    opacity: 0;
+}
+.popup.active{
+   opacity: 1;
+}
+.icon-close{
+   height: 14%;
+   width: 97%;
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+ }
+ .text-div{
+   width: 100%;
+   height: 88%;
+   display: block;
+ }
+ .text-div a{
+   text-decoration: none;
+   color: black;
+   font-size: 17px;
+   font-weight: 500;
+   padding: 10px;
+ }
+.login{
+   height: 1.5rem;
+   width: 100%;
+   background-color: white;
+
+}
+.login a:hover{
+   color: gainsboro;
+   transition: 0.6s;
+}
+ 
 .hero-sec-image{
     width: 100%;
     height: 33rem;
@@ -178,15 +224,14 @@ body{
  .wrapped-merge{
     height: auto;
     width: 100%;
-   display: block;
-    align-items: center;
-    
+   display: flex;
+    background-color: gainsboro;
+    background-image: linear-gradient(to left, gainsboro, white);
  }
  .wrapped{
     width: 40%;
     height: 24.5rem;
-    margin-top: 30px;
-    margin-left: 30%;
+    margin: 30px;
     display: flex;
     justify-content: space-evenly;
  }
@@ -244,7 +289,112 @@ body{
    width: 40%;
    height: 31.5rem;
    margin: 30px;
-   margin-left: 30%;
+   margin-top: 20rem;
    display: flex;
    justify-content: space-evenly;
 }
+.hed-sec-part{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   text-align: center;
+}
+.hed-sec-part h1{
+   color: rgb(150, 147, 147);
+}
+.example-sec{
+   width: 100%;
+   height: 100rem;
+  display: flex;
+   flex-wrap: wrap;
+}
+.examle{
+   width: 40%;
+   height: 30rem;
+   background-color: #000;
+   align-items: center;
+   display: block;
+   margin: 35px;
+   border-radius: 12px;
+   box-shadow: 1px 1px 3px 3px rgb(182, 178, 178);
+}
+.image-sec{
+   width: 100%;
+   height: 30rem;
+}
+.image-sec img{
+ width: 100%;
+   height: 100%;
+   object-fit: cover;
+   background-size: cover;
+   border-radius: 12px;
+}
+.conten-sec-last{
+   width: 100%;
+   height: 12rem;
+   margin-bottom: 10px;
+}
+.conten-sec-last p{
+   font-size: 20px;
+   font-weight: 400;
+   line-height: -2px;
+}
+.conten-sec-last span{
+   font-weight: 700;
+}
+.foot-part{
+   width: 100%;
+   height: 20rem;
+   background-color: #d9d9d9;
+   display: flex;
+   justify-content: space-evenly;
+}
+.content-foot-img{
+   width: 23%;
+   height: 40%;
+   margin-top: 7rem;
+   background: #000;
+    
+}
+.content-foot-img img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+.content-foot{
+   width: 26%;
+   height: 68%;
+   margin-top: 5rem;
+   display: block;
+   justify-content: center;
+   text-align: center;
+}
+.content-foot .part{
+   height: 3rem;
+   width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 20px;
+   font-weight: 400;
+   cursor: pointer;
+}
+.content-foot .part:hover{
+      color: rgb(176, 165, 165);
+      transition: 0.3s ease-in-out;
+}
+.team{
+   height: 5rem;
+   width: 100%;
+   background-color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.team p{
+   font-size: 12px;
+   font-weight: 400;
+   counter-reset: gainsboro;
+}
+
+ 
